methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:31: error: '(' expected but '}' found.
    }
    ^SlugHunting:39: error: Unmatched closing brace '}' ignored here
  }
  ^